--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -12,20 +12,19 @@
 
 <body>
 
-	<div id="record_button"></div>
-
-	<!-- <script src='../../../node_modules/web-audio-recorder-js/lib-minified/WebAudioRecorder.min.js'></script> -->
-	<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-	<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
-	<script src="../js/lib/WebAudioRecorder.js"></script>
-	<script src="../js/record.js"></script>
-	<script src="record_button.js"></script>
-
-	<!-- <div id="recordaudio">
+	<!-- <div id="record_button"></div> -->
+	
+	<div id="recordaudio">
 		<input type="text" id="filenameid">
 		<button id="recordbutton">Record</button>
 		<button id="postbutton">POST</button>
-	</div> -->
+	</div>
+
+	<!-- <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+	<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script> -->
+	<script src="./js/lib/WebAudioRecorder.js"></script>
+	<script src="./js/record.js"></script>
+	<!-- <script src="../js/record_button.js"></script> -->
 
 </body>
 
