--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -20,10 +20,17 @@
 		<button id="postbutton">POST</button>
 	</div>
 
+	<div id="login">
+		<input type="text" id="username">
+		<input type="password" id="password">
+		<button id="login">Login</button>
+	</div>
+
 	<!-- <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
 	<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script> -->
 	<script src="./js/lib/WebAudioRecorder.js"></script>
 	<script src="./js/record.js"></script>
+	<script src="./js/login.js"></script>
 	<!-- <script src="../js/record_button.js"></script> -->
 
 </body>
