Added hash check against password in db

--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -20,7 +20,7 @@
 		<button id="postbutton">POST</button>
 	</div>
 
-	<div id="login">
+	<div id="logindiv">
 		<input type="text" id="username">
 		<input type="password" id="password">
 		<button id="login">Login</button>
