Brought blob data to app/index

--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -26,6 +26,11 @@
 		<button id="login">Login</button>
 	</div>
 
+	<div id="playeddiv">
+		<audio controls src=""></audio>
+	</div>
+
+
 	<!-- <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
 	<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script> -->
 	<script src="./js/lib/WebAudioRecorder.js"></script>
