Registration form logic formed

--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -12,6 +12,7 @@
 
 <body>
 
+	<a id="registration" href="register.html">Register</a>
 	<!-- <div id="record_button"></div> -->
 	
 	<div id="recordaudio">
