--- a/app/src/public/register.html
+++ b/app/src/public/register.html
@@ -9,15 +9,18 @@
 
 <body>
 
-<h1 id="error" style="visibility: hidden;"></h1>
+<div id="top">
+    <h3 id="error" style="visibility: hidden;"></h1>
+    <a href="index.html">Return to homepage</a>
+</div>
 
 <div id="registerform">
-    <input type="text" id="username" placeholder="Username">
-    <input type="password" id="password" placeholder="Password" >
-    <input type="password" id="verify" placeholder="Verify Password">
-    <input type="text" id="first" placeholder="First Name">
-    <input type="text" id="last" placeholder="Last Name">
-    <input type="email" id="email" placeholder="Email Address">
+    <input type="text" id="username" style="border-style: solid" placeholder="Username">
+    <input type="password" id="password" style="border-style: solid" placeholder="Password" >
+    <input type="password" id="verify" style="border-style: solid" placeholder="Verify Password">
+    <input type="text" id="first" style="border-style: solid" placeholder="First Name">
+    <input type="text" id="last" style="border-style: solid" placeholder="Last Name">
+    <input type="email" id="email" style="border-style: solid" placeholder="Email Address">
 
     <button id="register">Register</button>
 </div>
