added share this link

--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -16,7 +16,7 @@
 	<!-- <div id="record_button"></div> -->
 	
 	<div id="recordaudio">
-		<input type="text" id="filenameid" placeholder="Recording title">
+		<input type="text" id="usergivenid" placeholder="Recording title">
 		<button id="recordbutton">Record</button>
 		<!--<button id="postbutton">POST</button>-->
 	</div>
