Fixed record max name size

--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -16,9 +16,9 @@
 	<!-- <div id="record_button"></div> -->
 	
 	<div id="recordaudio">
+		<label for="usergivenid" id="nameerror"></label>
 		<input type="text" id="usergivenid" placeholder="Recording title">
 		<button id="recordbutton">Record</button>
-		<!--<button id="postbutton">POST</button>-->
 	</div>
 
 	<div id="logindiv">
