Centered stuff and changed colours

--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -3,12 +3,12 @@
 <html lang="en">
 <head>
   	<meta charset="utf-8">
-  	<title>Lynx</title>
+	  <title>Lynx</title>
   	<link rel="stylesheet" href="../css/stylesheet.css">
 </head>
 
 <body>
-
+	<h1>Lynx</h1>
 	<div>
 		<input type="text" id="hashlookup" placeholder="Hash ID">
 		<button id="hashbutton">Go to hash!</button>
