--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -3,67 +3,57 @@
 <html lang="en">
 <head>
   	<meta charset="utf-8">
-	  <title>Lynx</title>
+	<title>Lynx</title>
   	<link rel="stylesheet" href="../css/stylesheet.css">
 </head>
 
 <body>
-	<h1>Lynx</h1>
+	<h1 class="title">Lynx</h1>
 	<div id="signeddiv" style="display: none;">
 		<label id="signedin"></label>
-		<a onclick="logout()">Logout</a>
+		<a onclick="logout()" class="loginbuttons logout">Logout</a>
 	</div>
 	
-
-	<div>
-		<label for="hashlookup" class="inp">
-			<input type="text" id="hashlookup" placeholder="&nbsp;">
-			<span class="label" id="hashlookuplabel">Hash ID</span>
-			<span class="focus-bg"></span>
-		</label>
-		<button id="hashbutton">Go to hash!</button>
-	</div>
-	<!-- <div id="record_button"></div> -->
-	
-	<div id="recordaudio">
-		<label for="usergivenid" id="nameerror"></label>
-		<label for="usergivenid" class=inp>
-			<input type="text" id="usergivenid" placeholder="&nbsp;">
-			<span class="label"id="usergivenidlabel">Recording</span>
-			<span class="focus-bg"></span>
-		</label>
-		<button id="recordbutton">Record</button>
+	<div class="parentgrid1 middlepage">
+		<div id="recordaudio" class="column">
+			<label for="usergivenid" id="nameerror"></label>
+			<label for="usergivenid" class="inp">
+				<input type="text" id="usergivenid" placeholder="&nbsp;">
+				<span class="label"id="usergivenidlabel">Record Name</span>
+				<span class="focus-bg"></span>
+			</label>
+		</div>
+		<div class="column">
+			<button id="recordbutton" class="loginbuttons"></button>
+		</div>
 	</div>
 
-	<div id="logindiv">
-		<label for="username" class="inp">
-			<input type="text" id="username" placeholder="&nbsp;">
-			<span class="label" id="usernamelabel">Username</span>
-			<span class="focus-bg"></span>
-		</label>
-		<label for="password" class="inp">
-			<input type="password" id="password" placeholder="&nbsp;">
-			<span class="label" id="passwordlabel">Password</span>
-			<span class="focus-bg"></span>
-			
-		</label>
-		<button id="login">Login</button>
-		<a id="registration" href="register.html">Register</a>
+	<div id="logindiv" class="parentgrid1">
+		<div class="column">
+			<label for="username" class="inp">
+				<input type="text" id="username" placeholder="&nbsp;">
+				<span class="label" id="usernamelabel">Username</span>
+				<span class="focus-bg"></span>
+			</label>
+			<label for="password" class="inp">
+				<input type="password" id="password" placeholder="&nbsp;">
+				<span class="label" id="passwordlabel">Password</span>
+				<span class="focus-bg"></span>
+			</label>
+			<div class="parentgrid2">
+				<div class="column">
+					<button id="login" class="loginbuttons">Login</button>
+				</div>
+				<div class="column">
+					<a id="registration" href="register.html" class="loginbuttons">Register</a>
+				</div>
+			</div>
+		</div>
 	</div>
 
-	<!-- <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-	<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script> -->
 	<script src="./js/lib/WebAudioRecorder.js"></script>
 	<script src="./js/record.js"></script>
 	<script src="./js/login.js"></script>
-	<script>
-		let hashbutton = document.getElementById("hashbutton")
-		let hashid = document.getElementById("hashlookup")
-		hashbutton.onclick = () => {
-			window.location.href = "/webplayer/" + hashid.value;
-		}
-	</script>
-	<!-- <script src="../js/record_button.js"></script> -->
 
 </body>
 
