--- a/app/src/public/register.html
+++ b/app/src/public/register.html
@@ -4,65 +4,56 @@
 <head>
     <meta charset="utf-8">
     <title>Lynx Register</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-    </style>
     <link rel="stylesheet" href="../css/stylesheet.css">
 </head>
 
 <body>
 
+<h1 class="title">Register</h1>
+
 <div id="top">
     <h3 id="error" style="visibility: hidden;"></h1>
 </div>
 
-<div id="registerform">
-    <div class="parentgrid">
-        <div class="column">
+    <div class="parentgrid2">
+        <div class="column reg">
             <label for="username" class="inp">
-                <input type="text" id="username" placeholder="&nbsp;" name="reginput">
+                <input type="text" id="username" placeholder="&nbsp;" class="reginput">
                 <span class="label" id="usernamelabel">Username</span>
                 <span class="focus-bg"></span>
             </label>
             <label for="password" class="inp">
-                <input type="password" id="password" placeholder="&nbsp;" name="reginput">
+                <input type="password" id="password" placeholder="&nbsp;" class="reginput">
                 <span class="label" id="passwordlabel">Password</span>
                 <span class="focus-bg"></span>
             </label>
             <label for="verify" class="inp">
-                <input type="password" id="verify" placeholder="&nbsp;" name="reginput">
+                <input type="password" id="verify" placeholder="&nbsp;" class="reginput">
                 <span class="label" id="verifylabel">Verify Password</span>
                 <span class="focus-bg"></span>
             </label>
+            <button id="register" class="loginbuttons reg">Register</button>
         </div>
 
-        <div class="column">
+        <div class="column reg">
             <label for="first" class="inp">
-                <input type="text" id="first" style="border-style: solid" placeholder="&nbsp;" name="reginput">
+                <input type="text" id="first" placeholder="&nbsp;" class="reginput">
                 <span class="label" id="firstlabel">First Name</span>
                 <span class="focus-bg"></span>
             </label>
             <label for="last" class="inp">
-                <input type="text" id="last" style="border-style: solid" placeholder="&nbsp;" name="reginput">
+                <input type="text" id="last" placeholder="&nbsp;" class="reginput">
                 <span class="label" id="lastlabel">Last Name</span>
                 <span class="focus-bg"></span>
             </label>
             <label for="email" class="inp">
-                <input type="email" id="email" style="border-style: solid" placeholder="&nbsp;" name="reginput">
+                <input type="email" id="email" placeholder="&nbsp;" class="reginput">
                 <span class="label" id="emaillabel">Email Address</span>
                 <span class="focus-bg"></span>
             </label>
-        </div>
-
-        <div>
-            <button id="register">Register</button>
-        </div>
-
-        <div>
-            <a href="index.html">Return to homepage</a>
+            <a href="index.html" class="loginbuttons reg">Return to homepage</a>
         </div>
     </div>
-</div>
 
 
 <script type="text/javascript" src="./js/register.js"></script>
