--- a/app/src/public/mediaplayer.html
+++ b/app/src/public/mediaplayer.html
@@ -4,14 +4,19 @@
 
 <head>
   <meta charset="utf-8">
-
   <title>Lynx</title>
-
   <link rel="stylesheet" href="../css/stylesheet.css">
-
 </head>
 
 <body>
+
+  <h1 class="title">Media Player</h1>
+
+  <div id="signeddiv" style="display: none;">
+    <label id="signedin"></label>
+    <a href="index.html" class="loginbuttons logout">Home Page</a>
+    <a onclick="logout()" class="loginbuttons logout">Logout</a>
+  </div>
 
   <div id="mediaplayer">
     <audio type="audio/wav" id="audioplayer" controls>
