Added homepage button to myrecordings

--- a/app/src/public/myrecordings.html
+++ b/app/src/public/myrecordings.html
@@ -42,6 +42,7 @@
 
 <div id="top">
     <h5 id="error" style="display: hidden;"></h1>
+    <a href="index.html" class="loginbuttons logout">Home Page</a>
 </div>
 
 <div id="mediaplayer">
