Added incorrect credentials handling

--- a/app/src/public/myrecordings.html
+++ b/app/src/public/myrecordings.html
@@ -40,8 +40,8 @@
     </div>
 </div>
 
-<div id="top">
-    <h5 id="error" style="display: hidden;"></h1>
+<div id="top" style="visibility: hidden;">
+    <h5 id="error"></h1>
     <a href="index.html" class="loginbuttons logout">Home Page</a>
 </div>
 
