For Joe: Trying to add progress bar

--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -32,7 +32,11 @@
 		<div class="column">
 			<button id="recordbutton" class="loginbuttons"></button>
 		</div>
+		<div id = "progressbar" style="height:24px;width:0">
+		</div>
 	</div>
+
+
 
 	<div id="logindiv" class="parentgrid1">
 		<div class="column">
