--- a/app/src/public/myrecordings.html
+++ b/app/src/public/myrecordings.html
@@ -41,7 +41,7 @@
 </div>
 
 <div id="top" style="visibility: hidden;">
-    <h5 id="error"></h1>
+    <h5 id="error" style="color: red"></h5>
     <a href="index.html" class="loginbuttons logout">Home Page</a>
 </div>
 
