--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -32,7 +32,8 @@
 		<div class="column">
 			<button id="recordbutton" class="loginbuttons"></button>
 		</div>
-		<div id = "progressbar" style="height:24px;width:0">
+		<div class="progressbarcontainer">
+			<div id="progressbar" class= "progressbar"></div>
 		</div>
 	</div>
 
