refactored code, added api midding handling

--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -11,7 +11,11 @@
 	<h1 class="title">Lynx</h1>
 
 	<div id="regsuccess" style="display: none">
-		<h5 id="regsuccess">Registration Success! Please sign in with your new username and password.</h2>
+		<h5>Registration Success! Please sign in with your new username and password.</h5>
+    </div>
+    
+    <div id="micperms" style="display: none">
+        <h5 id="regsuccess" style="color: red">Microphone permissions denied. Click the icon in the url bar to turn mic permissions back on.</h5>
 	</div>
 
 	<div id="signeddiv" style="display: none;">
@@ -22,7 +26,6 @@
 	
 	<div class="parentgrid1 middlepage">
 		<div id="recordaudio" class="column">
-			<label for="usergivenid" id="nameerror"></label>
 			<label for="usergivenid" class="inp">
 				<input type="text" id="usergivenid" placeholder="&nbsp;">
 				<span class="label"id="usergivenidlabel">Record Name</span>
