--- a/app/src/public/register.html
+++ b/app/src/public/register.html
@@ -12,7 +12,9 @@
 <h1 class="title">Register</h1>
 
 <div id="top">
-    <h3 id="error" style="visibility: hidden;"></h1>
+    <h3 id="error" style="visibility: hidden;"></h3>
+    <h3>Password must be at least 8 characters long</h3>
+    <h4>Use a unique password as we're not cyber-security specialists</h4>
 </div>
 
     <div class="parentgrid2">
