--- a/app/src/public/test.html
+++ b/app/src/public/test.html
@@ -30,7 +30,7 @@
                 <span class="time2" id="totaltime"></span>
             </div>
             <div class="volume">
-                <svg width="24" height="24">
+                <svg id="volumebutton" width="24" height="24">
                     <path class="volumeicon" fill="white" d="M14.667 0v2.747c3.853 1.146 6.666 4.72 6.666 8.946 0 4.227-2.813 7.787-6.666 8.934v2.76C20 22.173 24 17.4 24 11.693 24 5.987 20 1.213 14.667 0zM18 11.693c0-2.36-1.333-4.386-3.333-5.373v10.707c2-.947 3.333-2.987 3.333-5.334zm-18-4v8h5.333L12 22.36V1.027L5.333 7.693H0z" />
                 </svg>
             </div>
@@ -38,6 +38,15 @@
                 <source id="audiosource" src="" type="audio/wav">
             </audio>
         </div>
+
+        <div id="volumecontainer" class="audiocontainer volcontainer" style="display: none;">
+            <div class="slider volslider" id="volslider">
+                <div class="progress volprogress" id="volprogress">
+                    <div class="dot voldot" id="volprogressdot"></div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <script type="text/javascript" src="./js/mediaplayer.js"></script>
