working autio button

--- a/app/src/public/test.html
+++ b/app/src/public/test.html
@@ -42,7 +42,7 @@
         <div id="volumecontainer" class="audiocontainer volcontainer" style="display: none;">
             <div class="slider volslider" id="volslider">
                 <div class="progress volprogress" id="volprogress">
-                    <div class="dot voldot" id="volprogressdot"></div>
+                    <div class="dot voldot" id="voldot"></div>
                 </div>
             </div>
         </div>
