API Changes and recent recordings functionality

--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -68,10 +68,13 @@
             <input type="checkbox" id="recentrecordings">
             <span class="toggledot"></span>
         </label>
-        <p class="showrecordings">Show Recent Recordings</p>
+        <p class="showrecordings">Show Recent Recordings from Other Users</p>
     </div>
     
     <div id="mediaplayer" style="display: none;">
+        <div id="recentfailure" style="display: none">
+            <h5 style="color: red">No recent recordings found.</h5>
+        </div>
         <!-- rendered by recentrecordings.js -->
     </div>
 
