--- a/app/src/public/mediaplayer.html
+++ b/app/src/public/mediaplayer.html
@@ -88,7 +88,8 @@
     </div>
 
     <div class="returntohomepage">
-        <a href="/index.html" class="loginbuttons">Return to homepage</a>
+        <a href="/index.html" class="loginbuttons" id="returntohome" style="display: none">Return to homepage</a>
+        <a href="/myrecordings.html" class="loginbuttons" id="returntorecordings" style="display: none">Return to My Recordings</a>
     </div>
 
     <script type="text/javascript" src="../../js/login.js"></script>
