Refactored code for efficiency and styling

--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -26,12 +26,12 @@
     
     <div id="logindiv" class="parentgrid1">
 		<div class="column">
-			<label for="username" class="inp">
+			<label for="username" class="inputlabel">
 				<input type="text" id="username" placeholder="&nbsp;">
 				<span class="label" id="usernamelabel">Username</span>
 				<span class="focus-bg"></span>
 			</label>
-			<label for="password" class="inp">
+			<label for="password" class="inputlabel">
 				<input type="password" id="password" placeholder="&nbsp;">
 				<span class="label" id="passwordlabel">Password</span>
 				<span class="focus-bg"></span>
@@ -49,9 +49,9 @@
 
 	<div class="parentgrid1 middlepage">
 		<div id="recordaudio" class="column">
-			<label for="usergivenid" class="inp">
+			<label for="usergivenid" class="inputlabel">
 				<input type="text" id="usergivenid" placeholder="&nbsp;">
-				<span class="label"id="usergivenidlabel">Record Name</span>
+				<span class="label" id="usergivenidlabel">Record Name</span>
 				<span class="focus-bg"></span>
 			</label>
 		</div>
