--- a/app/src/public/internalerror.html
+++ b/app/src/public/internalerror.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Lynx</title>
+    <title>Lynx Internal Error</title>
     <link rel="stylesheet" href="../css/stylesheet.css">
 </head>
 
