--- a/app/src/public/myrecordings.html
+++ b/app/src/public/myrecordings.html
@@ -8,49 +8,47 @@
 </head>
 
 <body>
+    <h1 class="title">My Recordings</h1>
 
-<h1 class="title">My Recordings</h1>
+    <div id="signeddiv" style="display: none;">
+        <label id="signedin"></label>
+        <a href="index.html" class="loginbuttons logout">Home Page</a>
+        <a onclick="logout()" class="loginbuttons logout">Logout</a>
+    </div>
 
-<div id="signeddiv" style="display: none;">
-    <label id="signedin"></label>
-    <a href="index.html" class="loginbuttons logout">Home Page</a>
-    <a onclick="logout()" class="loginbuttons logout">Logout</a>
-</div>
-
-<div id="logindiv" class="parentgrid1">
-    <div class="column">
-        <label for="username" class="inp">
-            <input type="text" id="username" placeholder="&nbsp;">
-            <span class="label" id="usernamelabel">Username</span>
-            <span class="focus-bg"></span>
-        </label>
-        <label for="password" class="inp">
-            <input type="password" id="password" placeholder="&nbsp;">
-            <span class="label" id="passwordlabel">Password</span>
-            <span class="focus-bg"></span>
-        </label>
-        <div class="parentgrid2">
-            <div class="column">
-                <button id="login" class="loginbuttons">Login</button>
-            </div>
-            <div class="column">
-                <a id="registration" href="register.html" class="loginbuttons">Register</a>
+    <div id="logindiv" class="parentgrid1">
+        <div class="column">
+            <label for="username" class="inputlabel">
+                <input type="text" id="username" placeholder="&nbsp;">
+                <span class="label" id="usernamelabel">Username</span>
+                <span class="focus-bg"></span>
+            </label>
+            <label for="password" class="inputlabel">
+                <input type="password" id="password" placeholder="&nbsp;">
+                <span class="label" id="passwordlabel">Password</span>
+                <span class="focus-bg"></span>
+            </label>
+            <div class="parentgrid2">
+                <div class="column">
+                    <button id="login" class="loginbuttons">Login</button>
+                </div>
+                <div class="column">
+                    <a id="registration" href="register.html" class="loginbuttons">Register</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<div id="top" style="visibility: hidden;">
-    <h5 id="error" style="color: red"></h5>
-    <a href="index.html" class="loginbuttons logout">Home Page</a>
-</div>
+    <div id="top" style="visibility: hidden;">
+        <h5 id="error" style="color: red"></h5>
+        <a href="index.html" class="loginbuttons logout">Home Page</a>
+    </div>
 
-<div id="mediaplayer">
-    <!-- Populated by fetchrecordings.js -->
-</div>
+    <div id="mediaplayer">
+        <!-- Populated by fetchrecordings.js -->
+    </div>
 
-<script type="text/javascript" src="./js/login.js"></script>
-<script type="text/javascript" src="./js/fetchrecordings.js"></script>
-
+    <script type="text/javascript" src="./js/login.js"></script>
+    <script type="text/javascript" src="./js/fetchrecordings.js"></script>
 </body>
 </html>
