--- a/app/src/public/register.html
+++ b/app/src/public/register.html
@@ -8,58 +8,53 @@
 </head>
 
 <body>
+    <h1 class="title">Register</h1>
 
-<h1 class="title">Register</h1>
-
-<div id="top">
-    <h3 id="error" style="visibility: hidden;"></h3>
-    <h3>Password must be at least 8 characters long</h3>
-    <h4>Use a unique password as we're not cyber-security specialists</h4>
-</div>
-
-    <div class="parentgrid2">
-        <div class="column reg">
-            <label for="username" class="inp">
-                <input type="text" id="username" placeholder="&nbsp;" class="reginput">
-                <span class="label" id="usernamelabel">Username</span>
-                <span class="focus-bg"></span>
-            </label>
-            <label for="password" class="inp">
-                <input type="password" id="password" placeholder="&nbsp;" class="reginput">
-                <span class="label" id="passwordlabel">Password</span>
-                <span class="focus-bg"></span>
-            </label>
-            <label for="verify" class="inp">
-                <input type="password" id="verify" placeholder="&nbsp;" class="reginput">
-                <span class="label" id="verifylabel">Verify Password</span>
-                <span class="focus-bg"></span>
-            </label>
-            <button id="register" class="loginbuttons reg">Register</button>
-        </div>
-
-        <div class="column reg">
-            <label for="first" class="inp">
-                <input type="text" id="first" placeholder="&nbsp;" class="reginput">
-                <span class="label" id="firstlabel">First Name</span>
-                <span class="focus-bg"></span>
-            </label>
-            <label for="last" class="inp">
-                <input type="text" id="last" placeholder="&nbsp;" class="reginput">
-                <span class="label" id="lastlabel">Last Name</span>
-                <span class="focus-bg"></span>
-            </label>
-            <label for="email" class="inp">
-                <input type="email" id="email" placeholder="&nbsp;" class="reginput">
-                <span class="label" id="emaillabel">Email Address</span>
-                <span class="focus-bg"></span>
-            </label>
-            <a href="index.html" class="loginbuttons reg">Return to homepage</a>
-        </div>
+    <div id="top">
+        <h3 id="error" style="visibility: hidden;"></h3>
+        <h3>Password must be at least 8 characters long</h3>
+        <h4>Use a unique password as we're not cyber-security specialists</h4>
     </div>
 
+        <div class="parentgrid2">
+            <div class="column reg">
+                <label for="username" class="inputlabel">
+                    <input type="text" id="username" placeholder="&nbsp;" class="reginput">
+                    <span class="label" id="usernamelabel">Username</span>
+                    <span class="focus-bg"></span>
+                </label>
+                <label for="password" class="inputlabel">
+                    <input type="password" id="password" placeholder="&nbsp;" class="reginput">
+                    <span class="label" id="passwordlabel">Password</span>
+                    <span class="focus-bg"></span>
+                </label>
+                <label for="verify" class="inputlabel">
+                    <input type="password" id="verify" placeholder="&nbsp;" class="reginput">
+                    <span class="label" id="verifylabel">Verify Password</span>
+                    <span class="focus-bg"></span>
+                </label>
+                <button id="register" class="loginbuttons reg">Register</button>
+            </div>
 
-<script type="text/javascript" src="./js/register.js"></script>
-
+            <div class="column reg">
+                <label for="first" class="inputlabel">
+                    <input type="text" id="first" placeholder="&nbsp;" class="reginput">
+                    <span class="label" id="firstlabel">First Name</span>
+                    <span class="focus-bg"></span>
+                </label>
+                <label for="last" class="inputlabel">
+                    <input type="text" id="last" placeholder="&nbsp;" class="reginput">
+                    <span class="label" id="lastlabel">Last Name</span>
+                    <span class="focus-bg"></span>
+                </label>
+                <label for="email" class="inputlabel">
+                    <input type="email" id="email" placeholder="&nbsp;" class="reginput">
+                    <span class="label" id="emaillabel">Email Address</span>
+                    <span class="focus-bg"></span>
+                </label>
+                <a href="index.html" class="loginbuttons reg">Return to homepage</a>
+            </div>
+        </div>
+    <script type="text/javascript" src="./js/register.js"></script>
 </body>
-
 </html>
