--- a/app/src/public/mediaplayer.html
+++ b/app/src/public/mediaplayer.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Lynx</title>
+    <title>Lynx Mediaplayer</title>
     <link rel="stylesheet" href="../css/stylesheet.css">
 </head>
 
@@ -18,12 +18,12 @@
 
     <div id="logindiv" class="parentgrid1">
         <div class="column">
-            <label for="username" class="inp">
+            <label for="username" class="inputlabel">
                 <input type="text" id="username" placeholder="&nbsp;">
                 <span class="label" id="usernamelabel">Username</span>
                 <span class="focus-bg"></span>
             </label>
-            <label for="password" class="inp">
+            <label for="password" class="inputlabel">
                 <input type="password" id="password" placeholder="&nbsp;">
                 <span class="label" id="passwordlabel">Password</span>
                 <span class="focus-bg"></span>
@@ -112,6 +112,5 @@
             audiocontroller.load()
         }
     </script>
-
 </body>
 </html>
